--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-accordion-menu": "^0.1.46",
     "vue-content-loader": "^0.2.3",
     "vue-router": "^3.2.0"
   },
