--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-content-loader": "^0.2.3",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vue2-flip-countdown": "^0.11.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
